--- a/info.yaml
+++ b/info.yaml
@@ -51,7 +51,7 @@ documentation:
     - segment d
     - segment e
     - segment f
-    - segment g
+    - segment 
     - dot
 # A description of what the bidirectional I/O pins do (e.g. I2C SDA, I2C SCL, etc)
   bidirectional:
